--- a/views/events.erb
+++ b/views/events.erb
@@ -2,7 +2,7 @@
 
 <% for event in @events %>
     <p>
-        <a href="#"><%= event[:title] %></a>
+        <a href="/events/<%=event[:id]%>"><%= event[:title] %></a>
     </p>
 <% end %>
 
